Changes since CPAchecker 1.2
----------------------------

* r8387: CPAchecker can now find and report multiple specification violations in one file.
  To use this, set the option "analysis.stopAfterError = false".
  Note that because of this the file names of all error-path-related output files
  (e.g., "ErrorPath*.*") have changed.
* r8060: Better resolution of relative paths, for example, paths in configuration files
  are now relative to the directory of the configuration file.
  Now CPAchecker should be easily runnable from any directory.
* r7277: The -spec command-line argument does not only accept file-name values,
  but also single words. A file with a matching name from config/specification/*.spc
  will be used in this case.
  Example: scripts/cpa.sh -spec ErrorLabel ...
* r7183: scripts/regression.py removed.
  All it's features are also supported by table-generator.py.
* r7043: CPAchecker now requires Java 7.
  C.f. INSTALL.txt, README.txt and doc/Developing.txt for more information.
* r7005: MathSAT4 is no longer available as SMT solver.


Changes from CPAchecker 1.1 to CPAchecker 1.2
---------------------------------------------

CPAchecker now supports several new analyses:

* CEGAR for ExplicitCPA (as submitted to SV-COMP'13)
  (c.f. "Explicit-State Software Model Checking Based on CEGAR and Interpolation", to appear in FASE'13)
  This can be enabled with the "explicitAnalysis" and "explicitAnalysis-ItpRefiner*" configurations
  (explicitAnalysis-ItpRefiner-ABElf is recommended)

* Conditional Model Checking (CMC)
  (c.f. "Conditional Model Checking: A Technique to Pass Information between Verifiers", FSE'12)
  To use two or more CMC-enabled configurations, use the "-cmc" command-line argument:
  Example: -cmc explicitAnalysis-100s-generate-cmc-condition -cmc predicateAnalysis-use-cmc-condition

* Sequential composition of analyses (as submitted to SV-COMP'13)
  The "-cmc" command-line argument can be used for this, too.